--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="card-header text-center" id="heading-1">
 				<div>
 					<div class="text-center">
-						<h4 id="name">
+						<h4 id="name" style="letter-spacing: 0.25em;">
 							Damian Williamson
 						</h4>
 					</div>
@@ -69,8 +69,8 @@
 							</div>
 							<div class="col" style="padding-left: 0px;">
 								<h5 class="mb-0">
-									<a style="color: #21201e;" role="button" data-toggle="collapse" href="#collapse-1"
-										aria-expanded="false" aria-controls="collapse-1">Projects</a>
+									<a style="color: #21201e; letter-spacing: 0.5em;" role="button" data-toggle="collapse" href="#collapse-1"
+										aria-expanded="false" aria-controls="collapse-1">PROJECTS</a>
 								</h5>
 							</div>
 						</div>
