Second Project has been added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 	<div id="accordion">
 		<div class="card">
-			<div class="card-header text-center" id="heading-1">
+			<div class="card-header text-center" id="heading-1" style="background-color: #e5e4df;">
 				<div>
 					<div class="text-center">
 						<h4 id="name" style="letter-spacing: 0.25em;">
@@ -69,8 +69,9 @@
 							</div>
 							<div class="col" style="padding-left: 0px;">
 								<h5 class="mb-0">
-									<a style="color: #21201e; letter-spacing: 0.5em;" role="button" data-toggle="collapse" href="#collapse-1"
-										aria-expanded="false" aria-controls="collapse-1">PROJECTS</a>
+									<a style="color: #21201e; letter-spacing: 0.5em;" role="button"
+										data-toggle="collapse" href="#collapse-1" aria-expanded="false"
+										aria-controls="collapse-1">PROJECTS</a>
 								</h5>
 							</div>
 						</div>
@@ -83,53 +84,94 @@
 				<div class="card">
 					<div id="accordion-1">
 						<div style="background-color: #21201e;" class="card">
-							<div class="text-center">
-								<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-									<div class="carousel-inner mx-auto" style="width: 50%; height: 50%;">
-										<div class="carousel-item active">
-											<img class="d-block w-100" src="Images/1.png" alt="First slide" style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-										</div>
-										<div class="carousel-item">
-											<img class="d-block w-100" src="Images/2.png" alt="Second slide" style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-										</div>
-										<div class="carousel-item">
-											<img class="d-block w-100" src="Images/3.png" alt="Third slide" style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-										</div>
+							<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner mx-auto" style="width: 50%; height: 50%;">
+									<div class="carousel-item active">
+										<img class="d-block w-100" src="Images/1.png" alt="First slide"
+											style="max-width: 50%; max-height: 50%; margin: 0 auto;">
 									</div>
-									<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-										<span class="sr-only">Previous</span>
-									</a>
-									<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-										<span class="carousel-control-next-icon" aria-hidden="true"></span>
-										<span class="sr-only">Next</span>
-									</a>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="Images/2.png" alt="Second slide"
+											style="max-width: 50%; max-height: 50%; margin: 0 auto;">
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="Images/3.png" alt="Third slide"
+											style="max-width: 50%; max-height: 50%; margin: 0 auto;">
+									</div>
 								</div>
-								<div class="mx-auto d-block w-100">
-									<a style="color: #e5e4df; text-decoration: underline;" class="mx-auto d-block" href="#">ORIGAMI Sofa Collection</a>
-									<div id="carousel-number" class="text-white mt-2"></div>
-								  </div>
-								  
+								<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+									data-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="carousel-control-next" href="#carouselExampleControls" role="button"
+									data-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
+							<div class="text-center">
+								<div id="carousel-number" class="text-white mt-2"></div>
+								<a style="color: #e5e4df; text-decoration: underline;" class="mx-auto d-block"
+									href="#">ORIGAMI Sofa Collection</a>
 							</div>
 						</div>
 
-						<div class="card">
-							<div class="card-header" id="heading-1-2">
+
+						<div style="background-color: #e5e4df; border-radius: 0px; border-color: transparent;" class="card">
+							<div class="card-header text-center" id="heading-1-2">
 								<h5 class="mb-0">
-									<a class="collapsed" role="button" data-toggle="collapse" href="#collapse-1-2"
-										aria-expanded="false" aria-controls="collapse-1-2">
-										Project 1
+									<a style="color: #21201e;" class="collapsed" style="text-decoration: underline;"
+										role="button" data-toggle="collapse" href="#collapse-1-2" aria-expanded="false"
+										aria-controls="collapse-1-2"> OVO Easychair 2018
 									</a>
 								</h5>
 							</div>
 
-							<div id="collapse-1-2" class="collapse" data-parent="#accordion-1"
+							<div style="border-radius: 0px; border-color: transparent;" id="collapse-1-2" class="collapse" data-parent="#accordion-1"
 								aria-labelledby="heading-1-2">
-								<div class="card">
-									<img class="mx-auto d-block" src="Images/2.png" style="max-width: 100%;">
-									<a class="mx-auto d-block" href="#">Project name</a>
+								<div style="background-color: #e5e4df;" class="card">
+									<div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+										<div class="carousel-inner mx-auto" style="width: 50%; height: 50%;">
+											<div class="carousel-item active">
+												<img class="d-block w-100" src="Images/1.png" alt="First slide"
+													style="max-width: 50%; max-height: 50%; margin: 0 auto;">
+											</div>
+											<div class="carousel-item">
+												<img class="d-block w-100" src="Images/2.png" alt="Second slide"
+													style="max-width: 50%; max-height: 50%; margin: 0 auto;">
+											</div>
+											<div class="carousel-item">
+												<img class="d-block w-100" src="Images/3.png" alt="Third slide"
+													style="max-width: 50%; max-height: 50%; margin: 0 auto;">
+											</div>
+										</div>
+										<a style="color: #21201e;" class="carousel-control-prev"
+											href="#carouselExampleControls2" role="button" data-slide="prev">
+											<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+											<span class="sr-only">Previous</span>
+										</a>
+										<a class="carousel-control-next" href="#carouselExampleControls2" role="button"
+											data-slide="next">
+											<span class="carousel-control-next-icon" aria-hidden="true"></span>
+											<span class="sr-only">Next</span>
+										</a>
+									</div>
+									<div class="text-center">
+										<div style="color: #21201e;" id="carousel-number-2" class="mt-2"></div>
+										<a style="color: #21201e; text-decoration: underline;" class="mx-auto d-block"
+											href="#">OVO Easychair 2018</a>
+									</div>
 								</div>
 							</div>
+
+
+
+
+
+
+
+
 						</div>
 
 					</div>
@@ -145,9 +187,18 @@
 		var totalItems = $('#carouselExampleControls .carousel-item').length;
 		var currentIndex = $('#carouselExampleControls .carousel-item.active').index() + 1;
 		$('#carousel-number').text(currentIndex + '/' + totalItems);
-		$('#carouselExampleControls').on('slid.bs.carousel', function() {
+		$('#carouselExampleControls').on('slid.bs.carousel', function () {
 			currentIndex = $('#carouselExampleControls .carousel-item.active').index() + 1;
 			$('#carousel-number').text(currentIndex + '/' + totalItems);
+		});
+
+
+		var totalItems2 = $('#carouselExampleControls2 .carousel-item').length;
+		var currentIndex2 = $('#carouselExampleControls2 .carousel-item.active').index() + 1;
+		$('#carousel-number-2').text(currentIndex2 + '/' + totalItems2);
+		$('#carouselExampleControls2').on('slid.bs.carousel', function () {
+			currentIndex2 = $('#carouselExampleControls2 .carousel-item.active').index() + 1;
+			$('#carousel-number-2').text(currentIndex2 + '/' + totalItems2);
 		});
 	</script>
 </body>
