--- a/index.html
+++ b/index.html
@@ -47,140 +47,132 @@
 </head>
 
 <body class="h-auto">
-
-
-
-
-
 	<div id="accordion">
-		<div class="card">
+		<div class="card card border-0">
 			<div class="card-header text-center" id="heading-1" style="background-color: #e5e4df;">
 				<div>
 					<div class="text-center">
-						<h4 id="name" style="letter-spacing: 0.25em;">
-							Damian Williamson
-						</h4>
-					</div>
-					<div class="col-12">
-						<div id="project_catalog" class="row align-items-center">
-							<div class="col-auto" style="padding: 0px;">
-
-								<img id="icon-image" style="width: 20px;" src="Images/Icon.png" alt="" srcset="">
-							</div>
-							<div class="col" style="padding-left: 0px;">
-								<h5 class="mb-0">
-									<a style="color: #21201e; letter-spacing: 0.5em;" role="button"
-										data-toggle="collapse" href="#collapse-1" aria-expanded="false"
-										aria-controls="collapse-1">PROJECTS</a>
-								</h5>
-							</div>
+						<div class="col" style="padding-right: 150px;">
+							<h4 id="name" style="letter-spacing: 0.25em;">
+								Damian Williamson
+							</h4>
 						</div>
 					</div>
-
 				</div>
+				<div class="col-12">
+					<div id="project_catalog" class="row align-items-center">
+						<div class="col-auto" style="padding: 0px;">
+
+							<img id="icon-image" style="width: 20px;" src="Images/Icon.png" alt="" srcset="">
+						</div>
+						<div class="col" style="padding-left: 0px;">
+							<h5 class="mb-0">
+								<a style="color: #21201e; letter-spacing: 0.5em;" role="button" data-toggle="collapse"
+									href="#collapse-1" aria-expanded="false" aria-controls="collapse-1">ORIGAMI Sofa
+									Collection</a>
+							</h5>
+						</div>
+					</div>
+				</div>
+
 			</div>
-			<div id="collapse-1" class="collapse" data-parent="#accordion" aria-labelledby="heading-1">
+		</div>
+		<div id="collapse-1" class="collapse" data-parent="#accordion" aria-labelledby="heading-1">
 
-				<div class="card">
-					<div id="accordion-1">
-						<div style="background-color: #21201e;" class="card">
-							<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-								<div class="carousel-inner mx-auto" style="width: 50%; height: 50%;">
-									<div class="carousel-item active">
-										<img class="d-block w-100" src="Images/1.png" alt="First slide"
-											style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-									</div>
-									<div class="carousel-item">
-										<img class="d-block w-100" src="Images/2.png" alt="Second slide"
-											style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-									</div>
-									<div class="carousel-item">
-										<img class="d-block w-100" src="Images/3.png" alt="Third slide"
-											style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-									</div>
+			<div class="">
+				<div id="accordion-1">
+					<div style="background-color: #21201e;" class="">
+						<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner mx-auto" style="width: 75%; height: 75%;">
+								<div class="carousel-item active">
+									<img class="d-block w-100" src="Images/1.png" alt="First slide"
+										style="max-width: 75%; max-height: 75%; margin: 0 auto;">
 								</div>
-								<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
-									data-slide="prev">
-									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-									<span class="sr-only">Previous</span>
-								</a>
-								<a class="carousel-control-next" href="#carouselExampleControls" role="button"
-									data-slide="next">
-									<span class="carousel-control-next-icon" aria-hidden="true"></span>
-									<span class="sr-only">Next</span>
-								</a>
-							</div>
-							<div class="text-center">
-								<div id="carousel-number" class="text-white mt-2"></div>
-								<a style="color: #e5e4df; text-decoration: underline;" class="mx-auto d-block"
-									href="#">ORIGAMI Sofa Collection</a>
-							</div>
-						</div>
-
-
-						<div style="background-color: #e5e4df; border-radius: 0px; border-color: transparent;" class="card">
-							<div class="card-header text-center" id="heading-1-2">
-								<h5 class="mb-0">
-									<a style="color: #21201e;" class="collapsed" style="text-decoration: underline;"
-										role="button" data-toggle="collapse" href="#collapse-1-2" aria-expanded="false"
-										aria-controls="collapse-1-2"> OVO Easychair 2018
-									</a>
-								</h5>
-							</div>
-
-							<div style="border-radius: 0px; border-color: transparent;" id="collapse-1-2" class="collapse" data-parent="#accordion-1"
-								aria-labelledby="heading-1-2">
-								<div style="background-color: #e5e4df;" class="card">
-									<div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
-										<div class="carousel-inner mx-auto" style="width: 50%; height: 50%;">
-											<div class="carousel-item active">
-												<img class="d-block w-100" src="Images/1.png" alt="First slide"
-													style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-											</div>
-											<div class="carousel-item">
-												<img class="d-block w-100" src="Images/2.png" alt="Second slide"
-													style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-											</div>
-											<div class="carousel-item">
-												<img class="d-block w-100" src="Images/3.png" alt="Third slide"
-													style="max-width: 50%; max-height: 50%; margin: 0 auto;">
-											</div>
-										</div>
-										<a style="color: #21201e;" class="carousel-control-prev"
-											href="#carouselExampleControls2" role="button" data-slide="prev">
-											<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-											<span class="sr-only">Previous</span>
-										</a>
-										<a class="carousel-control-next" href="#carouselExampleControls2" role="button"
-											data-slide="next">
-											<span class="carousel-control-next-icon" aria-hidden="true"></span>
-											<span class="sr-only">Next</span>
-										</a>
-									</div>
-									<div class="text-center">
-										<div style="color: #21201e;" id="carousel-number-2" class="mt-2"></div>
-										<a style="color: #21201e; text-decoration: underline;" class="mx-auto d-block"
-											href="#">OVO Easychair 2018</a>
-									</div>
+								<div class="carousel-item">
+									<img class="d-block w-100" src="Images/2.png" alt="Second slide"
+										style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+								</div>
+								<div class="carousel-item">
+									<img class="d-block w-100" src="Images/3.png" alt="Third slide"
+										style="max-width: 75%; max-height: 75%; margin: 0 auto;">
 								</div>
 							</div>
-
-
-
-
-
-
-
-
+							<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+								data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleControls" role="button"
+								data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
 						</div>
-
+						<div class="text-center d-flex justify-content-center align-items-center py-2">
+							<a style="color: #e5e4df; text-decoration: underline;" class="d-block" href="#">ORIGAMI Sofa
+								Collection</a>
+							<div id="carousel-number" class="text-white mr-2" style="padding-left: 10px"></div>
+						</div>
 					</div>
-				</div>
 
+
+					<div style="background-color: #e5e4df; border-radius: 0px; border-color: transparent;" class="card">
+						<div style=" border-bottom: 0px; background-color: #e5e4df;" class="card-header text-center"
+							id="heading-1-2">
+							<h5 class="mb-0">
+								<a style="color: #21201e;" class="collapsed" style="text-decoration: underline;"
+									role="button" data-toggle="collapse" href="#collapse-1-2" aria-expanded="false"
+									aria-controls="collapse-1-2"> OVO Easychair 2018
+								</a>
+							</h5>
+						</div>
+
+						<div style="border-radius: 0px; border-color: transparent;" id="collapse-1-2" class="collapse"
+							data-parent="#accordion-1" aria-labelledby="heading-1-2">
+							<div style="background-color: #e5e4df;" class="">
+								<div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+									<div class="carousel-inner mx-auto" style="width: 75%; height: 75%;">
+										<div class="carousel-item active">
+											<img class="d-block w-100" src="Images/1.png" alt="First slide"
+												style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+										</div>
+										<div class="carousel-item">
+											<img class="d-block w-100" src="Images/2.png" alt="Second slide"
+												style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+										</div>
+										<div class="carousel-item">
+											<img class="d-block w-100" src="Images/3.png" alt="Third slide"
+												style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+										</div>
+									</div>
+									<a style="color: #21201e;" class="carousel-control-prev"
+										href="#carouselExampleControls2" role="button" data-slide="prev">
+										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+										<span class="sr-only">Previous</span>
+									</a>
+									<a class="carousel-control-next" href="#carouselExampleControls2" role="button"
+										data-slide="next">
+										<span class="carousel-control-next-icon" aria-hidden="true"></span>
+										<span class="sr-only">Next</span>
+									</a>
+								</div>
+								<div class="text-center d-flex justify-content-center align-items-center py-2">
+									<a style="color: #21201e; text-decoration: underline;" class="d-block"
+										href="#">ORIGAMI Sofa Collection</a>
+									<div id="carousel-number-2" style="color: #21201e; padding-left: 10px" class="mr-2">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
 			</div>
 
 		</div>
-		<!-- Navbar 2 -->
+
+	</div>
+	<!-- Navbar 2 -->
 	</div>
 
 	<script>
