--- a/index.html
+++ b/index.html
@@ -35,144 +35,161 @@
 			/* fa-chevron-down */
 			font-family: 'FontAwesome';
 			position: absolute;
-			right: 0;
+			right: -22px;
 		}
 
 		.mb-0>a[aria-expanded="true"]:after {
 			content: "\f00d";
 			/* fa-chevron-up */
 		}
+
+		@media (max-width: 576px){
+			.main-headingg{
+				font-size: 16px;
+			}
+
+			.titlee{
+				margin-left: 10px;
+				font-size: 18px;
+			}
+		}
 	</style>
 
 </head>
 
 <body class="h-auto">
+
+
+
+
+
 	<div id="accordion">
 		<div class="card card border-0">
-			<div class="card-header text-center" id="heading-1" style="background-color: #e5e4df;">
+			<div class="card-header text-center" id="heading-1" style="background-color:#e5e4df;">
 				<div>
-					<div class="text-center">
-						<div class="col" style="padding-right: 150px;">
-							<h4 id="name" style="letter-spacing: 0.25em;">
-								Damian Williamson
-							</h4>
-						</div>
+					<div class="text-center mt-4">
+						<h4 class="main-headingg" id="name" style="letter-spacing: 0.15em;">
+							Damian Williamson
+						</h4>
 					</div>
-				</div>
-				<div class="col-12">
-					<div id="project_catalog" class="row align-items-center">
-						<div class="col-auto" style="padding: 0px;">
+					<div class="col-12 mt-4 mb-3 pt-2">
+						<div id="project_catalog" class="row align-items-center">
+							<div class="col-auto" style="padding: 0px;">
 
-							<img id="icon-image" style="width: 20px;" src="Images/Icon.png" alt="" srcset="">
-						</div>
-						<div class="col" style="padding-left: 0px;">
-							<h5 class="mb-0">
-								<a style="color: #21201e; letter-spacing: 0.5em;" role="button" data-toggle="collapse"
-									href="#collapse-1" aria-expanded="false" aria-controls="collapse-1">ORIGAMI Sofa
-									Collection</a>
-							</h5>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-		<div id="collapse-1" class="collapse" data-parent="#accordion" aria-labelledby="heading-1">
-
-			<div class="">
-				<div id="accordion-1">
-					<div style="background-color: #21201e;" class="">
-						<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner mx-auto" style="width: 75%; height: 75%;">
-								<div class="carousel-item active">
-									<img class="d-block w-100" src="Images/1.png" alt="First slide"
-										style="max-width: 75%; max-height: 75%; margin: 0 auto;">
-								</div>
-								<div class="carousel-item">
-									<img class="d-block w-100" src="Images/2.png" alt="Second slide"
-										style="max-width: 75%; max-height: 75%; margin: 0 auto;">
-								</div>
-								<div class="carousel-item">
-									<img class="d-block w-100" src="Images/3.png" alt="Third slide"
-										style="max-width: 75%; max-height: 75%; margin: 0 auto;">
-								</div>
+								<img id="icon-image" style="width: 20px;" src="Images/Icon.png" alt="" srcset="">
 							</div>
-							<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
-								data-slide="prev">
-								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-								<span class="sr-only">Previous</span>
-							</a>
-							<a class="carousel-control-next" href="#carouselExampleControls" role="button"
-								data-slide="next">
-								<span class="carousel-control-next-icon" aria-hidden="true"></span>
-								<span class="sr-only">Next</span>
-							</a>
-						</div>
-						<div class="text-center d-flex justify-content-center align-items-center py-2">
-							<a style="color: #e5e4df; text-decoration: underline;" class="d-block" href="#">ORIGAMI Sofa
-								Collection</a>
-							<div id="carousel-number" class="text-white mr-2" style="padding-left: 10px"></div>
+							<div class="col" style="padding-left: 0px;">
+								<h5 class="mb-0">
+									<a class="titlee" style="color: #21201e; letter-spacing: 0.10em;" role="button"
+										data-toggle="collapse" href="#collapse-1" aria-expanded="false"
+										aria-controls="collapse-1">ORIGAMI Sofa Collection</a>
+								</h5>
+							</div>
 						</div>
 					</div>
 
+				</div>
+			</div>
+			<div id="collapse-1" class="collapse" data-parent="#accordion" aria-labelledby="heading-1">
 
-					<div style="background-color: #e5e4df; border-radius: 0px; border-color: transparent;" class="card">
-						<div style=" border-bottom: 0px; background-color: #e5e4df;" class="card-header text-center"
-							id="heading-1-2">
-							<h5 class="mb-0">
-								<a style="color: #21201e;" class="collapsed" style="text-decoration: underline;"
-									role="button" data-toggle="collapse" href="#collapse-1-2" aria-expanded="false"
-									aria-controls="collapse-1-2"> OVO Easychair 2018
+				<div class="">
+					<div id="accordion-1">
+						<div style="background-color: #21201e;" class="">
+							<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner mx-auto" style="width: 75%; height: 75%;">
+									<div class="carousel-item active">
+										<img class="d-block w-100" src="Images/1.png" alt="First slide"
+											style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="Images/2.png" alt="Second slide"
+											style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="Images/3.png" alt="Third slide"
+											style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+									</div>
+								</div>
+								<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+									data-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
 								</a>
-							</h5>
+								<a class="carousel-control-next" href="#carouselExampleControls" role="button"
+									data-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
+							<div class="text-center d-flex justify-content-center align-items-center py-2">
+								<div id="carousel-number" class="text-white mr-2">2/3</div>
+								<a style="color: #e5e4df; text-decoration: underline;" class="d-block" href="#">ORIGAMI Sofa Collection</a>
+							</div>
 						</div>
 
-						<div style="border-radius: 0px; border-color: transparent;" id="collapse-1-2" class="collapse"
-							data-parent="#accordion-1" aria-labelledby="heading-1-2">
-							<div style="background-color: #e5e4df;" class="">
-								<div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
-									<div class="carousel-inner mx-auto" style="width: 75%; height: 75%;">
-										<div class="carousel-item active">
-											<img class="d-block w-100" src="Images/1.png" alt="First slide"
-												style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+
+						<div style="background-color: #e5e4df; border-radius: 0px; border-color: transparent;" class="card">
+							<div style="border-bottom: #e5e4df;" class="card-header text-center" id="heading-1-2">
+								<h5 class="mb-0">
+									<a style="color: #21201e;" class="collapsed" style="text-decoration: underline;"
+										role="button" data-toggle="collapse" href="#collapse-1-2" aria-expanded="false"
+										aria-controls="collapse-1-2"> OVO Easychair 2018
+									</a>
+								</h5>
+							</div>
+
+							<div style="border-radius: 0px; border-color: transparent;" id="collapse-1-2" class="collapse" data-parent="#accordion-1"
+								aria-labelledby="heading-1-2">
+								<div style="background-color: #e5e4df;" class="">
+									<div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+										<div class="carousel-inner mx-auto" style="width: 75%; height: 75%;">
+											<div class="carousel-item active">
+												<img class="d-block w-100" src="Images/1.png" alt="First slide"
+													style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+											</div>
+											<div class="carousel-item">
+												<img class="d-block w-100" src="Images/2.png" alt="Second slide"
+													style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+											</div>
+											<div class="carousel-item">
+												<img class="d-block w-100" src="Images/3.png" alt="Third slide"
+													style="max-width: 75%; max-height: 75%; margin: 0 auto;">
+											</div>
 										</div>
-										<div class="carousel-item">
-											<img class="d-block w-100" src="Images/2.png" alt="Second slide"
-												style="max-width: 75%; max-height: 75%; margin: 0 auto;">
-										</div>
-										<div class="carousel-item">
-											<img class="d-block w-100" src="Images/3.png" alt="Third slide"
-												style="max-width: 75%; max-height: 75%; margin: 0 auto;">
-										</div>
+										<a style="color: #21201e;" class="carousel-control-prev"
+											href="#carouselExampleControls2" role="button" data-slide="prev">
+											<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+											<span class="sr-only">Previous</span>
+										</a>
+										<a class="carousel-control-next" href="#carouselExampleControls2" role="button"
+											data-slide="next">
+											<span class="carousel-control-next-icon" aria-hidden="true"></span>
+											<span class="sr-only">Next</span>
+										</a>
 									</div>
-									<a style="color: #21201e;" class="carousel-control-prev"
-										href="#carouselExampleControls2" role="button" data-slide="prev">
-										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-										<span class="sr-only">Previous</span>
-									</a>
-									<a class="carousel-control-next" href="#carouselExampleControls2" role="button"
-										data-slide="next">
-										<span class="carousel-control-next-icon" aria-hidden="true"></span>
-										<span class="sr-only">Next</span>
-									</a>
-								</div>
-								<div class="text-center d-flex justify-content-center align-items-center py-2">
-									<a style="color: #21201e; text-decoration: underline;" class="d-block"
-										href="#">ORIGAMI Sofa Collection</a>
-									<div id="carousel-number-2" style="color: #21201e; padding-left: 10px" class="mr-2">
+									<div class="text-center d-flex justify-content-center align-items-center py-2">
+										<div id="carousel-number-2"style="color: #21201e;" class="mr-2"></div>
+										<a style="color: #21201e; text-decoration: underline;" class="d-block" href="#">ORIGAMI Sofa Collection</a>
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
 
+
+
+
+
+
+
+
+						</div>
+
+					</div>
 				</div>
+
 			</div>
 
 		</div>
-
-	</div>
-	<!-- Navbar 2 -->
+		<!-- Navbar 2 -->
 	</div>
 
 	<script>
