--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 
-		@media only screen and (min-width: 831px) and (max-width: 1080) {
+		@media only screen and (min-width: 831px) and (max-width: 1080px) {
 			.image-name {
 				padding-right: 0px;
 
