Renamed the Main title

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 							<h5 class="mb-0">
 								<a style="color: #21201e; letter-spacing: 0.5em;" class="main-project" role="button"
 									data-toggle="collapse" href="#collapse-1" aria-expanded="false"
-									aria-controls="collapse-1">ORIGAMI Sofa
-									Collection</a>
+									aria-controls="collapse-1">PROJECTS</a>
 							</h5>
 						</div>
 					</div>
@@ -180,7 +179,7 @@
 							<h5 class="mb-0">
 								<a class="collapsed project-name" style="text-decoration: underline; color: #21201e;"
 									role="button" data-toggle="collapse" href="#collapse-1-2" aria-expanded="false"
-									aria-controls="collapse-1-2"> OVO Easychair 2018
+									aria-controls="collapse-1-2">OVO Easychair 2018
 								</a>
 							</h5>
 						</div>
@@ -217,7 +216,7 @@
 								<div
 									class="text-center d-flex justify-content-center align-items-center py-2 image-name">
 									<a style="color: #21201e; text-decoration: underline;" class="d-block"
-										href="#">ORIGAMI Sofa Collection</a>
+										href="#">OVO Easychair 2018</a>
 									<div id="carousel-number-2" style="color: #21201e;" class="mr-2 image-number">
 									</div>
 								</div>
