--- a/index.html
+++ b/index.html
@@ -119,10 +119,8 @@
 							</a>
 						</div>
 						<div class="text-center d-flex justify-content-center align-items-center py-2">
-							<a style="color: #e5e4df; text-decoration: underline;" class="d-block"
-								href="#">ORIGAMI Sofa
-								Collection</a>
-							<div id="carousel-number" class="text-white mr-2"></div>
+							<a style="color: #e5e4df; text-decoration: underline; font-size: x-small;" class="d-block" href="#">ORIGAMI Sofa Collection</a>
+							<div id="carousel-number" class="text-white mr-2" style="font-size: x-small; padding-left: 70px;"></div>
 						</div>
 					</div>
 
